<resources>
    <string name="app_name">OnSet</string>

    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign Up</string>

    <string name="username_prompt">username</string>
    <string name="password_prompt">password</string>
    <string name="password_check_prompt">password (again)</string>
    <string name="email_prompt">email@address.com</string>
    <string name="name_prompt">Forename Surname</string>

    <string name="player_error">Error initializing YouTube player: %s</string>

    <string name="back_button_text">Back</string>
    <string name="edit_button_text">Edit</string>


    <string name="add_location_title">ADD LOCATION</string>
    <string name="edit_location_title">Edit Location</string>
    <string name="add_locaiton_search">Search for Locations:</string>

    <string name="location_name_hint">ex. CN Tower, Wonderland, etc.</string>
    <string name="location_address_hint">ex. 42 Wallaby Way, Sydney</string>
    <string name="location_phone_hint">(416) 123-4567</string>
    <string name="location_type_hint">Coffee Shop, Bar, etc.</string>
    <string name="location_features_hint">ex. Stage, Pool, Lake, etc.</string>
    <string name="location_private_button">Privately Owned</string>
    <string name="location_public_button">Public Space</string>
    <string name="film_permissions_hint">ex. Weekends Only</string>
    <string name="sample_video_text_hint">https://youtu.be/O9EvBdzHvqI</string>

    <string name="location_name">Location Name:</string>
    <string name="location_address">Address:</string>
    <string name="location_type">Location Type:</string>
    <string name="location_features">Features:</string>
    <string name="location_privacy">Private or Public?</string>
    <string name="film_permissions">Film Permissions:</string>
    <string name="sample_video_text">Videos/Films Shot Here</string>
    <string name="only_me_text">Only For Me?</string>
    <string name="only_me_true_text">Yes - Personal Location Only </string>
    <string name="only_me_false_text">No - Share with Everyone</string>
    <string name="add_sample_video_text">YouTube Links:</string>
    <string name="add_more_videos_text">Add Another YouTube Video</string>
    <string name="title_activity_location_list">LocationList</string>
    <string name="please_fill_out_all_fields">Please fill out all fields.</string>
    <string name="passwords_dont_match">Passwords do not match, please try again.</string>
    <string name="username_taken">Username is already taken. Please choose something else</string>
    <string name="password_too_weak">Password too weak - must be at least six characters</string>
    <string name="improper_email">Email is not formatted properly</string>
    <string name="email_used">Email address already in use</string>
    <string name="wrong_password">Invalid password</string>
    <string name="invalid_username">Not a valid username</string>

    <string name="submit_location_button_text">Submit Location</string>

    <string name="edit_sample_videos">Add YouTube link:</string>
    <string name="edit_location_apply_button_text">Apply Changes</string>
    <string name="edit_location_cancel_button_text">Cancel Changes</string>

    <string name="choice_my_locations">My Locations</string>
    <string name="choice_shared_locations">Shared Locations</string>

    <string name="to_map_text">View Map</string>

    <string name="permissions_error">OnSet requires location permissions in order to function properly.
                                Please grant us these permissions under Settings/Apps/OnSet/Permissions.</string>

    <string name="map_back_button">Return to Location Information</string>
    <string name="search_hint">Enter Search Term Here</string>

    <string name="spinner_keyType_label">Key Type:</string>
    <string name="spinner_key_label">Key:</string>
    <string name="locationList_addLabel">ADD</string>
    <string name="no_username_entered">No username entered</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_option">What would you like to view?</string>
    <string name="my_locations">My Locations</string>
    <string name="shared_locations">Shared Locations</string>
    <string-array name="keyList">
        <item>Search Category:</item>
        <item>NAME</item>
        <item>TYPE</item>
        <item>ADDRESS</item>
        <item>CITY</item>
        <item>COUNTRY</item>
        <item>FILMING PERMISSIONS</item>
        <item>FEATURES</item>
        <item>PRIVATE OR PUBLIC</item>
        <item>ONLY FOR ME OR FOR EVERYONE</item>
    </string-array>

    <string name="Login_header_label">LOGIN</string>
    <string name="signup_header_label">SIGN UP</string>

    <string name="locations_header_label">LOCATIONS</string>
    <string name="use_valid_location">Please use a valid location</string>
    <string name="select_private_or_public_space">Please check either privately owned or public space.</string>
    <string name="select_personal_or_shared">Please check either personal or shared location.</string>
    <string name="_private">Private</string>
    <string name="_public">Public</string>
    <string name="capital_private">PRIVATE</string>
    <string name="capital_public">PUBLIC</string>
    <string name="enter_username">Please enter a username</string>
    <string name="login_failed">Login Failed.</string>
    <string name="signup_failed">Registration Failed.</string>

    <string name="vids_filmed_here_label">VIDEOS FILMED HERE:</string>
    <string name="viewMapButtonLabel">View Map</string>
    <string name="edit">EDIT</string>
    <string name="location_updated">Location Updated!</string>
</resources>
